@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.example.search_eat_pis {
    namespace Controller {
      class com.example.search_eat_pis.Controller.DatabaseAdapter {
          {static} + TAG : String
          {static} + databaseAdapter : DatabaseAdapter
          {static} + db : FirebaseFirestore
          {static} + listener : vmInterface
          - mAuth : FirebaseAuth
          - storage : FirebaseStorage
          - user : FirebaseUser
          + DatabaseAdapter()
          + deleteReserva()
          + getLocales()
          + getReservas()
          + getSectores()
          + getUsuario()
          + initFirebase()
          + isValidCorreo()
          + saveReserva()
          + saveUsuario()
          + updateReservas()
          + updateValoracion()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace Controller {
      interface com.example.search_eat_pis.Controller.DatabaseAdapter.vmInterface {
          {abstract} + setBoolean()
          {abstract} + setLocales()
          {abstract} + setReservas()
          {abstract} + setSector()
          {abstract} + setToast()
          {abstract} + setUsuario()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace Controller {
      class com.example.search_eat_pis.Controller.ViewModel {
          - mBoolean : MutableLiveData<Boolean>
          - mLocales : MutableLiveData<ArrayList<Local>>
          - mReservas : MutableLiveData<ArrayList<Reserva>>
          - mSector : MutableLiveData<Sector>
          - mToast : MutableLiveData<String>
          - mUsuario : MutableLiveData<Usuario>
          + ViewModel()
          + addReserva()
          + getBoolean()
          + getLocal()
          + getLocales()
          + getReserva()
          + getReservas()
          + getSector()
          + getToast()
          + getUsuario()
          + iniLocal()
          + iniReservas()
          + iniSector()
          + iniUsuario()
          + isValidCorreo()
          + setBoolean()
          + setCoordenada()
          + setLocales()
          + setReservas()
          + setSector()
          + setToast()
          + setUsuario()
      }
    }
  }
  

  com.example.search_eat_pis.Controller.DatabaseAdapter -up-|> android.app.Activity
  com.example.search_eat_pis.Controller.DatabaseAdapter +-down- com.example.search_eat_pis.Controller.DatabaseAdapter.vmInterface
  com.example.search_eat_pis.Controller.ViewModel .up.|> com.example.search_eat_pis.Controller.DatabaseAdapter.vmInterface
  com.example.search_eat_pis.Controller.ViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.example.search_eat_pis.Controller.ViewModel o-- com.example.search_eat_pis.Controller.DatabaseAdapter : da
  com.example.search_eat_pis.Controller.ViewModel o-- com.example.search_eat_pis.Model.Coordenada : coordenada


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
